[package]
name = "suins-indexer"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"
version.workspace = true

[dependencies]
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
sui_data_ingestion_core = { git = "https://github.com/mystenlabs/sui", package = "sui-data-ingestion-core" }
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
base64-url.workspace = true
bcs.workspace = true
bytes.workspace = true
futures.workspace = true
mysten_metrics = { git = "https://github.com/mystenlabs/sui", package = "mysten-metrics" }
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
prometheus.workspace = true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
sui_name_service = { git = "https://github.com/mystenlabs/sui", package = "sui-name-service" }
sui_storage = { git = "https://github.com/mystenlabs/sui", package = "sui-storage" }
sui_types = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }
url.workspace = true
dotenvy = "0.15"
move_core_types = { git = "https://github.com/mystenlabs/sui", package = "move-core-types" }
mysten_service = { git = "https://github.com/mystenlabs/sui", package = "mysten-service" }
rustls = "0.23.26"
webpki-roots = "0.26.3"
tokio-postgres-rustls = "0.12.0"
tokio-postgres = "0.7.12"
futures-util = "0.3.30"
chrono = "0.4.41"

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
